# exercism

./: Cargo.toml
bash/proverb/: proverb.sh
bash/proverb/.exercism/: metadata.json
rust/alphametics/: Cargo.toml
rust/alphametics/.exercism/: metadata.json
rust/alphametics/src/: lib.rs
rust/alphametics/tests/: alphametics.rs
